@@ -8,6 +8,7 @@
         "Noti",
         "Shotted",
         "autobuyers",
+        "balancement",
         "elem",
         "endregion",
         "megastructures",
